--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <title>NQAMail - No Questions Asked Mail</title>
  </head>
  <body>
-  <p>Hello World</p>
+  <h1>NQAMail - No Questions Asked Mail</h1>
+  <h2><i>Worse service than Gmail, at a higher price.</i></h2>
+
+
  </body>
 </html>
