--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
   <title>NQAMail - No Questions Asked Mail</title>
  </head>
  <body>
+  <p>▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄</br>
+█░░░░░░░░▀█▄▀▄▀██████░▀█▄▀▄▀██████</br>                                    
+░░░░ ░░░░░░░▀█▄█▄███▀░░░ ▀█▄█▄███</br>
+
+</p>
+
   <h1>NQAMail - No Questions Asked Mail</h1>
   <h2><i>Worse service than Gmail, at a higher price.</i></h2>
+  <p>Free* webmail/POP/IMAP accounts (@nqamail.com). Custom domain hosting for $20/year, for any number of user accounts, plus $1 per month per 10GB of total mailbox storage.</p>
+  <p><i>  *Basic accounts are free for now, but they might cost $1 per year later on, maybe?? I don't know how to set up a billing system so I'll probably just ask for handouts.</i></p>
 
+  <h2>Rules</h2>
+  <p><blink><strong>Do NOT fucking spam</strong></blink> with email accounts on NQAMail and ruin it for everyone else. Also don't do illegal things. I'll hand your ass over to the cops if they come looking for you.</p>
+  <h3>FAQ</h3>
+  <h4>Will you read my email</h4>
+  <p>Probably not. I could but I'm pretty busy and I don't care. Email is always in plaintext unless you encrypt it yourself with PGP or something.</p>
+  <h4>Will you divulge my mail to government agencies</h4>
+  <p>Yeah for sure if they ask.</p>
+  <h4>Are you copying cock.li</h4>
+  <p>No. I thought I had a fun original idea but then someone told me about cock.li. So this is pretty much the same except I didn't copy them.</p>
+  <h4>What is your service level agreement</h4>
+  <p>There is none, but I'm doing my best. No guarantees.</p>
+  <h4>Is this a non-profit</h4>
+  <p>lol no but I'm not actually making money off it.</p>
+  <h3>Want an account? Contact:</h3>
+  <ul><li>postmaster@nqamail.com</li><li>Wechat: makeximu1337</li><li>Telegram: @nqamail</li></ul>
+  <h2>I only accept Ether, Ethereum-based shitcoins or RMB over Wechat</h2>
+
+</p>
 
  </body>
 </html>
