added gimme emoji

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <p>lol no but I'm not actually making money off it.</p>
   <h3>Want an account? Contact:</h3>
   <ul><li>postmaster@nqamail.com</li><li>Wechat: makeximu1337</li><li>Telegram: @nqamail</li></ul>
-  <h2>I only accept Ether, Ethereum-based shitcoins or RMB over Wechat</h2>
+  <h2>I only accept Ether, Ethereum-based shitcoins or RMB over Wechat ༼ つ ◕_◕ ༽つ</h2>
 
 </p>
 
