removed wechat id

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h4>Is this a non-profit</h4>
   <p>lol no but I'm not actually making money off it.</p>
   <h3>Want an account? Contact:</h3>
-  <ul><li>postmaster@nqamail.com</li><li>Wechat: makeximu1337</li><li>Telegram: @nqamail</li></ul>
+  <ul><li>postmaster@nqamail.com</li><li>Telegram: @nqamail</li></ul>
   <h2>I only accept Ether, Ethereum-based shitcoins or RMB over Wechat ༼ つ ◕_◕ ༽つ</h2>
 
 </p>
