--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <p><i>  *Basic accounts are free for now, but they might cost $1 per year later on, maybe?? I don't know how to set up a billing system so I'll probably just ask for handouts.</i></p>
 
   <h2>Rules</h2>
-  <p><blink><strong>Do NOT fucking spam</strong></blink> with email accounts on NQAMail and ruin it for everyone else. Also don't do illegal things. I'll hand your ass over to the cops if they come looking for you.</p>
+  <p>( ●_●) <blink><strong>Do NOT fucking spam</strong></blink> with email accounts on NQAMail and ruin it for everyone else. Also don't do illegal shit. I'll hand your ass over to the cops if they come looking for you.</p>
+</br>
   <h3>FAQ</h3>
   <h4>Will you read my email</h4>
   <p>Probably not. I could but I'm pretty busy and I don't care. Email is always in plaintext unless you encrypt it yourself with PGP or something.</p>
@@ -27,6 +28,7 @@
   <p>There is none, but I'm doing my best. No guarantees.</p>
   <h4>Is this a non-profit</h4>
   <p>lol no but I'm not actually making money off it.</p>
+</br>
   <h3>Want an account? Contact:</h3>
   <ul><li>postmaster@nqamail.com</li><li>Telegram: @nqamail</li></ul>
   <h2>I only accept Ether, Ethereum-based shitcoins or RMB over Wechat ༼ つ ◕_◕ ༽つ</h2>
